--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <li><a href="what-is-this-site.html">What is this site?</a></li>
           <li><a href="graph-language.html">Graph language</a></li>
           <li><a href="graph-ui.html">Graph ui</a></li>
+          <li><a href="graph-ui-valtio.html">Graph ui with valtio</a></li>
           <li><a href="brainfuck.html">Brainfuck</a></li>
         </ul>
     </main>
