add web audio page

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           <li><a href="graph-ui.html">Graph ui</a></li>
           <li><a href="graph-ui-valtio.html">Graph ui with valtio</a></li>
           <li><a href="brainfuck.html">Brainfuck</a></li>
+          <li><a href="webaudio/audio.html">Audio</a></li>
         </ul>
     </main>
   </body>
